--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Kanit', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 24px;
     background: url("stones_jewels_diamonds_80294_1280x1024.jpg");
   }
+
 
 .jumbotron {
   text-align: center;
@@ -31,6 +32,7 @@ body {
 border: #757575 2px solid;
 background-color: #9e9e9e;
 color: white;
+justify-content: center;
 }
 
 .col-6 {
@@ -65,7 +67,12 @@ color: white;
   cursor: pointer;
 }
 
+#player {
+margin-left: 42%;
+margin-top: 10%;
+}
+/* 
 .jp (
   width: 100px;
   height: 100px;
-)
+) */
